--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,5 @@ jobs:
       - name: Java tests
         uses: STAR-RG/shaker-action@main
         with:
-          testing_tool: maven
-          no_stress_runs: 1
-          stress_runs: 2
+          tool: maven
+          runs: 2
